--- a/Chiftele cu sos și piure.adoc
+++ b/Chiftele cu sos și piure.adoc
@@ -1,1 +1,30 @@
-chiftele_cu_sos_si_piure.adoc
+= Chiftele cu sos și piure
+
+== Ingrediente
+
+=== Pentru chiftele
+
+* 500 g carne tocată amestec
+* 500 g pâine veche
+* 150 ml lapte
+* 1 ou
+* 3 căței usturoi
+* ceapă granulată
+* pătrunjel
+* cimbru
+* sare
+* piper
+
+=== Pentru sos
+
+* 1 lingură făină
+* 500 ml suc de roșii
+* 2 căței de usturoi
+* foi de dafin
+
+=== Pentru piure
+
+* cartofi
+* unt
+* lapte
+* sare
