--- a/Curry vegetarian cu orez.adoc
+++ b/Curry vegetarian cu orez.adoc
@@ -1,8 +1,8 @@
-= Curry cu pui și orez
+= Curry vegetarian cu orez
 
 == Instrucțiuni
 
 * călește ceapă și usturoi într-o oală mare și apoi adaugă și prăjește masala
-* adaugă pui
+* adaugă cartof, morcov, năut, conopidă
 * adaugă sos de roșii și iaurt sau smântână
 * fierbe la foc mic
