--- a/Plăcintă cu mere.adoc
+++ b/Plăcintă cu mere.adoc
@@ -1,1 +1,23 @@
-placinta_cu_mere.adoc
+= Plăcintă cu mere
+
+== Ingrediente
+
+* 650 g făină
+* 250 g unt
+* 200 g smântână
+* 2 ouă
+* praf de copt (cât pentru 750 g făină)
+* esență vanilie
+* sare
+* 2 kg mere
+* scorțișoară
+
+== Instrucțiuni
+
+* călește mărul ras într-o oală până când devine maro și moale; adaugă scorțișoara
+* amestecă restul de ingrediente într-un bol mare până când se transformă în aluat și frământă-l bine
+* așează aluat, măr, aluat într-o tavă, pe foi de copt și dă la cuptor la 180° C pentru aproximativ 40 minute
+
+== Sursa
+
+https://jamilacuisine.ro/placinta-cu-mere-reteta-video/
