--- a/Legume la cuptor.adoc
+++ b/Legume la cuptor.adoc
@@ -1,1 +1,11 @@
-legume_la_cuptor.adoc
+= Legume la cuptor
+
+== Ingrediente
+
+* cartofi
+* cartofi dulci
+* ardei
+* zucchini
+* ulei de măsline
+* iaurt
+* usturoi
