Update Ciorbă cu fasole.adoc

--- a/Ciorbă cu fasole.adoc
+++ b/Ciorbă cu fasole.adoc
@@ -1,1 +1,14 @@
+= Ciorbă cu fasole
 
+== Ingrediente
+
+* 300 g fasole
+* 250 g roșii pasate (suc gros)
+* 2 morcovi
+* 2 cepe
+* 1 ardei gras
+* 1/2 țelină
+* pătrunjel
+* cimbru
+* sare
+* piper
